--- a/EXERCICIOS/ex-019/fundo006.html
+++ b/EXERCICIOS/ex-019/fundo006.html
@@ -3,20 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
-            height: 100vh;
+            /*height: 100vh;
             background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;*/
+
+            /* 
+            Shorthand - background
+            color > image > position > repeat > [size] > attachment
+            */
+
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
+            background-size: cover;
         }
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
+            text-align: justify;
             margin: auto;
             border: 1px solid darkblue;
             border-radius: 15px;
@@ -27,7 +37,7 @@
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim esse exercitationem atque iste quae. Assumenda ad, alias sed magni, magnam ullam harum, dolore saepe molestiae eligendi rem facilis. Iure, ad? Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta dolor ipsam, ullam fugiat consectetur dolores eum molestias maiores enim officiis facere quia hic blanditiis sequi adipisci quod laboriosam unde architecto? Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias quibusdam enim, voluptatibus quae itaque ullam repellat numquam quisquam, distinctio in ab corrupti exercitationem illo error dolorum adipisci officiis laborum quia. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non quod labore illo? Non odit quis quisquam magnam ratione aliquid assumenda repudiandae aperiam vero culpa! Accusantium voluptate vitae blanditiis voluptatibus voluptates. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem maxime praesentium voluptate, ad aliquam laudantium nulla ratione at, suscipit aut, quae officiis distinctio sit eaque minus dicta vero inventore. Sed! Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus ad possimus quos reprehenderit voluptate fuga eaque iusto, eos mollitia ex atque veniam ea consectetur obcaecati odio debitis ab perferendis ipsam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque laboriosam provident soluta veniam sequi incidunt unde voluptatem. Vitae distinctio omnis cum consectetur sed, totam ad veritatis provident facere ut laborum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit quis repellat consequatur quos beatae voluptas, libero sed exercitationem dignissimos natus doloremque explicabo consequuntur cumque fuga! Dignissimos facilis dolore iure numquam. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla impedit deserunt corporis ratione, dolorem qui, facilis voluptate fuga et iure, aspernatur rerum fugit temporibus modi iusto! Sequi incidunt suscipit hic. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque delectus labore sunt minima repellat neque hic ipsam ex numquam culpa, quas dolorum magni nam autem. In aperiam atque totam eligendi!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim esse exercitationem atque iste quae. Assumenda ad, alias sed magni, magnam ullam harum, dolore saepe molestiae eligendi rem facilis. Iure, ad? Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta dolor ipsam, ullam fugiat consectetur dolores eum molestias maiores enim officiis facere quia hic blanditiis sequi adipisci quod laboriosam unde architecto? Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias quibusdam enim, voluptatibus quae itaque ullam repellat numquam quisquam, distinctio in ab corrupti exercitationem illo error dolorum adipisci officiis laborum quia. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non quod labore illo? Non odit quis quisquam magnam ratione aliquid assumenda repudiandae aperiam vero culpa! Accusantium voluptate vitae blanditiis voluptatibus voluptates. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem maxime praesentium voluptate, ad aliquam laudantium nulla ratione at, suscipit aut, quae officiis distinctio sit eaque minus dicta vero inventore. Sed! Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus ad possimus quos reprehenderit voluptate fuga eaque iusto, eos mollitia ex atque veniam ea consectetur obcaecati odio debitis ab perferendis ipsam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque laboriosam provident soluta veniam sequi incidunt unde voluptatem. Vitae distinctio omnis cum consectetur sed, totam ad veritatis provident facere ut laborum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit quis repellat consequatur quos beatae voluptas, libero sed exercitationem dignissimos natus doloremque explicabo consequuntur cumque fuga! Dignissimos facilis dolore iure numquam. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla impedit deserunt corporis ratione, dolorem qui, facilis voluptate fuga et iure, aspernatur rerum fugit temporibus modi iusto! Sequi incidunt suscipit hic. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque delectus labore sunt minima repellat neque hic ipsam ex numquam culpa, quas dolorum magni nam autem. In aperiam atque totam eligendi!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero corporis nihil possimus fugiat. Hic sed totam distinctio, quos tempora iusto nobis a assumenda at explicabo, ex eveniet! Dolore, tempore deserunt. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque dolor ea, esse laudantium libero nobis velit adipisci modi magnam quos est amet porro, ullam fugit ut sunt totam aliquam odit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus ex expedita voluptas sed natus temporibus cum dolore similique nobis, culpa ad necessitatibus. Fugiat mollitia voluptates, dolorum saepe illum quaerat perspiciatis. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed facilis porro, aliquam sapiente minima blanditiis. Porro temporibus vero, aliquid dignissimos molestiae dicta quasi earum odit facilis, molestias ipsum quos aperiam?</p>
     </main>
 </body>
 </html>
