--- a/EXERCICIOS/ex-021/tabela004.html
+++ b/EXERCICIOS/ex-021/tabela004.html
@@ -7,11 +7,12 @@
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
+            background-color: rgb(218, 128, 128);
         }
 
         table {
-            border-collapse: collapse
-
+            border-collapse: collapse;
+            background-color: rgb(221, 179, 72);
         }
         
         caption {
@@ -38,11 +39,11 @@
                 <th colspan="3" scope="colgroup">Filmes</th>
             </tr>
         </thead>
+        <tfoot>
+            <th colspan="4" scope="row">Total</th>
+            <td>1000</td>
+        </tfoot>
         <tbody>
-            <tfoot>
-                <th colspan="4" scope="row">Total</th>
-                <td>1000</td>
-            </tfoot>
             <tr>
                 <th rowspan="3" scope="rowgroup">Mulheres</th>
                 <td>Ana Maria Santos</td>
