--- a/EXERCICIOS/ex-022/iframe01.html
+++ b/EXERCICIOS/ex-022/iframe01.html
@@ -4,16 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudos de ifreme</title>
+    <style>
+        iframe.cursoemvideo {
+            height: 400px;
+            width: 430px;
+            border: 5px solid black;
+            border-radius: 15px;
+            box-shadow: 3px 3px 10px #2727276c;
+        }
+    </style>
 </head>
 <body>
     <h1>Testando o uso de ifreme</h1>
     <p>
         Acessando o site do 
         
-        <iframe src="https://www.cursoemvideo.com" frameborder="0"></iframe>
+        <iframe class="cursoemvideo" src="https://www.cursoemvideo.com" frameborder="0"  scolling="no">
+            <a href="https://www.cursoemvideo.com" target="_blank">CursoemVídeo</a>
+        </iframe>
 
         para aprender a programar.
-        <p>Tambêm o site do <iframe src="https://www.google.com" frameborder="0"></iframe> é muito bom.</p>
+    </p>
+
+    <p>
+        Tambêm o site do 
+        <iframe src="https://www.google.com.br" frameborder="0">
+            <a href="https://www.google.com.br" target="_blank">Google</a>
+        </iframe> 
+        é muito bom.
+    </p>
+
+    <p>
+        O reposuitóio do Guanabara no
+        <iframe src="https://gustavoguanabara.github.io" frameborder="0" height="400" width="400">
+            <a href="https://github.com/gustavoguanabara">Github</a>
+        </iframe>
+        também é bem legal!
     </p>
 </body>
 </html>
