--- a/EXERCICIOS/ex-022/iframe01.html
+++ b/EXERCICIOS/ex-022/iframe01.html
@@ -29,7 +29,7 @@
     <p>
         Tambêm o site do 
         <iframe src="https://www.google.com.br" frameborder="0">
-            <a href="https://www.google.com.br" target="_blank">Google</a>
+            <p>google</p>
         </iframe> 
         é muito bom.
     </p>
