--- a/EXERCICIOS/ex-025/mq005/index.html
+++ b/EXERCICIOS/ex-025/mq005/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
    <link rel="stylesheet" href="estilos/style.css"> 
 </head>
 <body>
     <header>
         <h1>Meu site</h1>
-        <menu>
+        <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">
+            lists
+        </span>
+        <menu id="itens">
             <ul>
                 <li><a href="#">Opção 1</a></li>
                 <li><a href="#">Opção 2</a></li>
@@ -28,5 +32,14 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium pariatur eaque vero voluptatibus! Adipisci dolores maiores deserunt quisquam consequatur eligendi hic quaerat aut sint corporis. Molestiae, aliquam! Dolor, impedit debitis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse voluptatibus provident sit natus aperiam, sapiente cupiditate, ipsam praesentium corrupti illo cumque iste commodi, adipisci nihil perspiciatis accusantium. Ut, minus facere?</p>
         </article>
     </main>
+    <script>
+        function clickMenu() {
+            if (itens.style.display == 'block') {
+                itens.style.display = 'none'
+            } else {
+                itens.style.display = 'block'
+            }
+        }
+    </script>
 </body>
 </html>
