Menu Burguer com JS

--- a/EXERCICIOS/ex-025/mq005/index.html
+++ b/EXERCICIOS/ex-025/mq005/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1>Meu site</h1>
         <span id="burguer" class="material-symbols-outlined" onclick="clickMenu()">
-            lists
+            menu
         </span>
         <menu id="itens">
             <ul>
