--- a/EXERCICIOS/ex-027/flex001/index.html
+++ b/EXERCICIOS/ex-027/flex001/index.html
@@ -4,6 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flexible Box</title>
+    <style>
+        div.conteiner {
+            background-color: lightsalmon;
+
+            display: flex;
+        }
+
+        div.item {
+            background-color: lightskyblue;
+            border: 1px solid black;
+            text-align: center;
+
+            flex: auto;
+        }
+    </style>
 </head>
 <body>
     <div class="conteiner">
