main e cross axis

--- a/EXERCICIOS/ex-027/flex002/index.html
+++ b/EXERCICIOS/ex-027/flex002/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flexible Box</title>
+    <title>Flexible Box 002</title>
     <style>
         div.conteiner {
             background-color: lightsalmon;
 
             display: flex;
+            flex-direction: column-reverse;
         }
 
         div.item {
@@ -16,7 +17,7 @@
             border: 1px solid black;
             text-align: center;
 
-            flex: auto;
+            padding: 10px;
         }
     </style>
 </head>
