--- a/EXERCICIOS/ex-027/flex008/index.html
+++ b/EXERCICIOS/ex-027/flex008/index.html
@@ -42,11 +42,11 @@
         }
 
         div#i6 {
-        
+            align-self: auto;
         }
 
         div#i7 {
-        
+            align-self: auto;
         }
     </style>
 </head>
